	* graphics/greycstoration-gimp-plugin: removed (deprecated over 180 days ago)
	* graphics/greycstoration: removed (deprecated over 180 days ago)
	* kde4-support/policykit-kde: removed (deprecated over 180 days ago)
	* kde4-support/polkit-qt: removed (deprecated over 180 days ago)
	* kernels/bluez-bluefw: removed (deprecated over 180 days ago)

2011-10-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
	* libs/tclap: new spell, a C++ command line parser library

2011-10-14 Bor Kraljič <pyrobor@ver.si>
	* audio-players/mpdc: removed (we no longer support qt3 (qt-x11))
	* audio-players/prokyon3: removed (we no longer support qt3 (qt-x11))
	* audio-soft/kaconnect: removed (we no longer support qt3 (qt-x11))
	* audio-soft/qjackconnect: removed (we no longer support qt3 (qt-x11))
	* cluster/openmosixview: removed (we no longer support qt3 (qt-x11))
	* crypto/qca-tls: removed (we no longer support qt3 (qt-x11))
	* crypto/qca: removed (we no longer support qt3 (qt-x11))
	* graphics/qcad: removed (we no longer support qt3 (qt-x11))
	* ham/hamfax: removed (we no longer support qt3 (qt-x11))
	* kernels/elpp: removed (we no longer support qt3 (qt-x11))
	* net/cutecom: removed (we no longer support qt3 (qt-x11))
	* science/genchemlab: removed (we no longer support qt3 (qt-x11))
	* science/orsa: removed (we no longer support qt3 (qt-x11))
	* science/qgrid: removed (we no longer support qt3 (qt-x11))
	* science/qucs: removed (we no longer support qt3 (qt-x11))
	* utils/qbrew: removed (we no longer support qt3 (qt-x11))
	* video/divxcalc: removed (we no longer support qt3 (qt-x11))
	* x11-toolkits/qtgtk: removed (we no longer support kde3)
	* x11-toolkits/qwt: removed (we no longer support qt3 (qt-x11))

2011-10-13 Bor Kraljič <pyrobor@ver.si>
	* audio-players/mp3kult: removed (we no longer support kde3)
	* audio-plugins/xmmsarts: removed (we no longer support kde3)
	* chat-irc/kmyirc: removed (we no longer support kde3)