@@ -1,16 +1,0 @@
-           SPELL=bluez-kernel
-         VERSION=deprecated
-      PATCHLEVEL=1
-SOURCE_DIRECTORY=$BUILD_DIRECTORY/$SPELL-$VERSION
-        WEB_SITE=http://bluez.sourceforge.net
-         ENTERED=20021215
-     SOURCE_HASH=sha512:91568beebdb96fa26bb0146c0e7a888e0c691f10613c85102c7594123965dcf345559f8a37376b854158b7b5ddef23ab6aa86be54447ab6bbc0e6e2b332d4813
-        KEYWORDS="bluetooth kernels"
-       BUILD_API=1
-           SHORT="Kernel for the bluez Bluetooth stack"
-      LICENSE[0]=GPL
-cat << EOF
-Kernel for the bluez Bluetooth stack. Remember to check the howto in
-http://bluez.sourceforge.net/howto/, specially the part on modules.conf,
-at http://bluez.sourceforge.net/howto/node6.html.
-EOF
