@@ -1,2 +1,0 @@
-up_trigger bluez-kernel dispel_self &&
-up_trigger bluez cast_self
