@@ -1,18 +1,0 @@
-*** hci_usb.h.orig      Sat Dec 14 17:49:48 2002
- --- hci_usb.h   Sat Dec 14 15:39:47 2002
- ***************
- *** 40,45 ****
- --- 40,53 ----
-   #define HCI_MAX_BULK_TX       4
-   #define HCI_MAX_BULK_RX       1
- 
- + typedef struct urb *purb_t;
- + #define devrequest struct usb_ctrlrequest
- + #define requesttype bRequestType
- + #define request bRequest
- + #define value wValue
- + #define index wIndex
- + #define length wLength
- +
-   struct hci_usb {
-         struct hci_dev          hdev;
