@@ -1,14 +1,0 @@
-*** obextool.c.orig     Sat Dec 14 17:52:17 2002
- --- obextool.c  Sat Dec 14 17:47:54 2002
- ***************
- *** 140,146 ****
- --- 140,148 ----
- 
- 
-   obex_ctrans_t btobex_ctrans = {
- + 
-         customdata:  &btobex_context,
- + 
-         connect:     btobex_connect,
-         disconnect:  btobex_disconnect,
-         listen:      btobex_listen,
