@@ -1,27 +1,0 @@
-2011-10-14 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: fixed long description wrap (scripted)
-
-2011-04-08 Arjan Bouter <abouter@sourcemage.org>
-	* deprecated in favour of bluez
-
-2010-04-11 Ismael Luceno <ismael@sourcemage.org>
-	* BUILD: Fix kernel headers path
-
-2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
-	* DETAILS: [automated] Removed UPDATED.
-
-2006-06-12 Arwed v. Merkatz <v.merkatz@gmx.net>
-	* DETAILS: inserted BUILD_API=1 line
-
-2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
-	* DETAILS: (automated) Add KEYWORDS
-
-2005-11-29 Seth Woolley <seth@tautology.org>
-	* DETAILS: MD5 -> SHA512
-
-2002-12-18 Jose Bernardo Silva <josebernardo1@yahoo.com>
-	* Added patch to compile with kernel 2.4.20
-
-2002-12-15 Jose Bernardo Silva <josebernardo1@yahoo.com>
-	* Initial version
-
