@@ -6,6 +6,7 @@
 	* kde4-support/policykit-kde: removed (deprecated over 180 days ago)
 	* kde4-support/polkit-qt: removed (deprecated over 180 days ago)
 	* kernels/bluez-bluefw: removed (deprecated over 180 days ago)
+	* kernels/bluez-kernel: removed (deprecated over 180 days ago)
 
 2011-10-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* libs/tclap: new spell, a C++ command line parser library
